[build-system]
requires = ["setuptools==68.2.2", "wheel==0.42.0"]
build-backend = "setuptools.build_meta"

[project]
name = "support-triage-env"
version = "1.0.0"
description = "Customer support ticket triage environment for training RL agents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Support Triage Team"}
]
keywords = ["openenv", "reinforcement-learning", "customer-support", "environment"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "pydantic==2.5.0",
    "openai>=2.7.2,<3.0",
    "openenv-core==0.2.0",
    "python-dotenv==1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "black==23.12.0",
    "flake8==6.1.0",
]

[project.urls]
Homepage = "https://github.com/Sujallio/Support-Triage-Environment-OpenEnv-"
Documentation = "https://github.com/Sujallio/Support-Triage-Environment-OpenEnv-/blob/main/README.md"
Repository = "https://github.com/Sujallio/Support-Triage-Environment-OpenEnv-.git"

[project.scripts]
server = "server.app:main"
support-triage-server = "server.app:main"

[tool.setuptools]
packages = ["env", "server"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
